--- a/styles/styles.css
+++ b/styles/styles.css
@@ -530,7 +530,7 @@ PIE DE PÁGINA
     padding: 4rem 0;
     display: flex;
     flex-direction: column;
-    gap: 2rem;
+    gap: 3rem;
     align-items: center;
     background: var(--gradiente-principal);
     color: var(--color-texto-destacado);
@@ -539,16 +539,14 @@ PIE DE PÁGINA
 .menu__pie,
 .pie__redes-sociales,
 .pie__copyright {
-    /* Agregamos el padding horizontal de forma individual para que funcione en móvil 
-       sin afectar al centrado en desktop */
-    padding-left: var(--espaciado-principal); /* 2rem */
-    padding-right: var(--espaciado-principal); /* 2rem */
-    width: 100%; /* Ocupa todo el ancho disponible */
+    padding-left: var(--espaciado-principal);
+    padding-right: var(--espaciado-principal); 
+    width: 100%; 
 }
 
 .menu__pie .menu__lista {
     flex-direction: column;
-    gap: 1rem;
+    gap: 1.5rem;
 }
 
 .pie__redes-sociales {
@@ -562,6 +560,8 @@ PIE DE PÁGINA
     font-size: 2rem;
     color: var(--color-texto-destacado);
     transition: opacity 0.3s;
+    margin-bottom: 1.5rem;
+    margin-top: 1.3rem;
 }
 
 .pie__redes-sociales a:hover {
@@ -721,6 +721,37 @@ RESPONSIVE (MEDIA QUERIES)
         grid-template-columns: repeat(3, 1fr);
         /* Mantenemos 3 columnas */
         gap: 4rem;
+    }
+    
+    /* *** CONTACTO (LADO A LADO) *** */
+    .contacto__contenedor {
+        max-width: var(--ancho-maximo); 
+        display: flex;
+        flex-direction: row; 
+        gap: 8rem; /* Aumentamos la separación entre Info y Formulario */
+        text-align: left;
+        padding: 5rem; 
+    }
+
+    .contacto__info {
+        width: 45%; /* Damos más espacio al formulario */
+        padding-right: 4rem; 
+        border-right: 0.1rem solid var(--color-fondo-oscuro); 
+        border-bottom: none; 
+        padding-bottom: 0;
+    }
+
+    .contacto__formulario {
+        width: 55%; 
+    }
+
+    .formulario__grupo-campos {
+        display: flex;
+        gap: 2rem;
+    }
+
+    .formulario__grupo-campos .campo__simple {
+        width: 50%;
     }
 
     /* *** PIE DE PÁGINA (Poner en una línea) *** */
